--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "firebase-admin": "^13.4.0"
+    "dotenv": "^16.5.0",
+    "firebase-admin": "^13.4.0",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
