--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.4.0",
+    "googleapis": "^150.0.1",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
