--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gimnasio-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node -r tsconfig-paths/register src/index.ts"
