--- a/package.json
+++ b/package.json
@@ -1,26 +1,12 @@
 {
-  "name": "gimnasio-bot",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node -r tsconfig-paths/register src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.4.0",
-    "googleapis": "^150.0.1",
-    "telegraf": "^4.16.3"
-  },
-  "devDependencies": {
-    "@types/node": "^24.0.3",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
-  }
+    "name": "bot-dormido",
+    "version": "1.0.0",
+    "main": "src/index.ts",
+    "scripts": {
+        "start": "ts-node src/index.ts"
+    },
+    "devDependencies": {
+        "ts-node": "^10.0.0",
+        "typescript": "^4.0.0"
+    }
 }
