--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6",
-        "esModuleInterop": true
-    }
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "strict": true
+  }
 }
