--- a/.github/workflows/sleep-bot.yml
+++ b/.github/workflows/sleep-bot.yml
@@ -2,7 +2,7 @@ name: Sleep Bot
 
 on:
   schedule:
-    - cron: '0 1 * * *'  # 22:00 Argentina (01:00 UTC)
+    - cron: '0 1 * * *'
   workflow_dispatch:
 
 jobs:
