--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "outDir": "dist",
+    "rootDir": "src",
     "module": "commonjs",
+    "target": "es2019",
     "esModuleInterop": true,
     "strict": true
-  }
+  },
+  "include": ["src"]
 }
